<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_section_title" />

    <Button
        android:id="@+id/spanishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spanish" />

    <Button
        android:id="@+id/basqueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basque" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_section_title"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/whiteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white" />

    <Button
        android:id="@+id/lightBlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_blue" />

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

</LinearLayout>
