<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_nueva_receta"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nombreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombreEditText"
        android:hint="@string/nombre_nueva_receta"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/ingredientesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredientes"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/nombreEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/ingredientesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredientesTextView"
        android:hint="@string/lista_ingredientes"
        android:minLines="3" />

    <TextView
        android:id="@+id/descripcionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/ingredientesEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/descripcionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descripcionTextView"
        android:hint="@string/descripcion_receta"
        android:minLines="3" />

    <CheckBox
        android:id="@+id/veganoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/es_vegano"
        android:layout_below="@id/descripcionEditText"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/recipeImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/veganoCheckBox"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/changeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_foto"
        android:layout_below="@id/recipeImageView"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/guardarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar"
        android:layout_alignTop="@id/changeImageButton"
        android:layout_toEndOf="@id/changeImageButton"
        android:layout_marginStart="16dp" />

</RelativeLayout>
